noinst_LIBRARIES = libpigeon.a
AM_CPPFLAGS = -I ./include -I /usr/include/ -I /usr/local/include/rapidjson/
AM_CXXFLAGS = -fPIC -Wall -Wextra -std=c++14 -O3
libpigeon_a_SOURCES = \
    include/file_info.h \
    include/http_handler_base.h \
    include/http_filter_base.h \
    include/http_filters.h \
    source/logger.cpp \
    include/logger.h \
    source/http_msg.cpp \
    include/http_msg.h \
    source/http_handlers.cpp \
    include/http_handlers.h \
    source/http_filters.cpp \
    include/http_filters.h \
    source/stop_watch.cpp \
    include/stop_watch.h \
    source/md5.cpp \
    include/md5.h \
    source/http_server.cpp \
    include/http_server.h \
    include/http_context.h \
    include/http_context.h \
    source/multi_part_parser.cpp \
    include/multi_part_parser.h \
    source/request_processor.cpp \
    include/request_processor.h \
    source/resource_handler.cpp \
    include/resource_handler.h \
    source/cache.cpp \
    include/cache.h \
    source/settings.cpp \
    include/settings.h \
    source/http_util.cpp \
    include/http_util.h \
    source/string_builder.cpp \
    include/string_builder.h